# docs/swagger.yaml
@@ -19,7 +19,7 @@ definitions:
         items:
           type: string
         type: array
-      collection:
+      coluuid:
         type: string
       contents:
         items:
@@ -53,9 +53,9 @@ definitions:
     type: object
   main.importDealBody:
     properties:
-      collection:
-        type: string
       collectionPath:
+        type: string
+      coluuid:
         type: string
       dealIDs:
         items:
@@ -73,11 +73,11 @@ definitions:
     type: object
   util.ContentAddIpfsBody:
     properties:
-      collection:
-        type: string
       collectionPath:
         type: string
-      name:
+      coluuid:
+        type: string
+      filename:
         type: string
       peers:
         items:
@@ -118,6 +118,18 @@ paths:
       tags:
         - admin
   /collections/add-content:
+    delete:
+      description: This endpoint is used to delete an existing collection.
+      parameters:
+        - description: Collection ID
+          in: path
+          name: coluuid
+          required: true
+          type: string
+      responses: {}
+      summary: Deletes a collection
+      tags:
+        - collections
     post:
       consumes:
         - application/json
@@ -141,7 +153,7 @@ paths:
       summary: Add contents to a collection
       tags:
         - collections
-  /collections/content/{collection-id}:
+  /collections/content/{coluuid}:
     get:
       description: This endpoint is used to get contents in a collection. When a collection is created, this collection object is retrievable along with its content via this endpoint.
       parameters:
@@ -198,12 +210,7 @@ paths:
       parameters:
         - description: Collection ID
           in: query
-          name: col
-          required: true
-          type: string
-        - description: Collection ID Long
-          in: query
-          name: collection
+          name: coluuid
           required: true
           type: string
         - description: Content
@@ -226,14 +233,14 @@ paths:
     get:
       description: This endpoint creates a new collection
       parameters:
-        - description: Collection
+        - description: Collection ID
           in: query
-          name: col
+          name: coluuid
           required: true
           type: string
         - description: Directory
           in: query
-          name: dir
+          name: collectionPath
           required: true
           type: string
       produces:
